make compatible with releasing

--- a/src/main/resources/dart2-v3template/apilib.mustache
+++ b/src/main/resources/dart2-v3template/apilib.mustache
@@ -1,5 +1,9 @@
 library {{pubName}}.api;
 
+{{#pubDescription}}
+/// {{{.}}}
+{{/pubDescription}}
+
 import 'dart:async';
 import 'dart:convert';
 import 'package:dio/dio.dart';
