#12 Add inline enum support

--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -1,18 +1,28 @@
 // {{name}}
 class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
-  {{#vars}}
-   {{^vendorExtensions.x-dart-inherited}}
-     {{#description}}/* {{{description}}} */{{/description}}
-     {{{dataType}}} {{name}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
-     {{#allowableValues}}
-       {{#min}} // range from {{min}} to {{max}}{{/min}}//{{^min}}enum {{name}}Enum { {{#values}} {{.}}, {{/values}} };{{/min}}{
-     {{/allowableValues}}
-   {{/vendorExtensions.x-dart-inherited}}
-  {{/vars}}
+{{#vars}}
+  {{^vendorExtensions.x-dart-inherited}}
+    {{#description}}/* {{{description}}} */{{/description}}
+    {{^allowableValues}}
+      {{{dataType}}} {{name}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+    {{/allowableValues}}
+    {{#allowableValues}}
+      {{^complexType}}
+        {{#min}} // range from {{min}} to {{max}}
+          {{{dataType}}} {{name}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+        {{/min}}
+        {{classname}}_{{name}}_Enum {{name}}{{#defaultValue}} = {{classname}}_{{name}}_Enum.{{{defaultValue}}}{{/defaultValue}};
+      {{/complexType}}
+      {{#complexType}}
+        {{{dataType}}} {{name}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+      {{/complexType}}
+    {{/allowableValues}}
+  {{/vendorExtensions.x-dart-inherited}}
+{{/vars}}
 {{^hasVars}}
-   dynamic json;
+  dynamic json;
 {{/hasVars}}
-  {{classname}}();
+{{classname}}();
 
   @override
   String toString() {
@@ -168,6 +178,22 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
   {{/isDate}}
   {{/isDateTime}}
   {{/allowableValues}}
+    {{^vendorExtensions.x-dart-inherited}}
+      {{^complexType}}
+        {{#allowableValues}}
+          {{^min}}
+            null;
+            if (_jsonData != null) {
+              for ({{classname}}_{{name}}_Enum element in {{classname}}_{{name}}_Enum.values) {
+                if (element.toString() == _jsonData) {
+                  {{name}} = element;
+                }
+              }
+            }
+          {{/min}}
+        {{/allowableValues}}
+      {{/complexType}}
+    {{/vendorExtensions.x-dart-inherited}}
     } // _jsonFieldName
 {{/vendorExtensions.x-dart-inherited}}{{/vars}}
   }
@@ -281,8 +307,28 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 
   {{classname}} copyWith({{#hasVars}}{
      {{#vars}}
-       {{{dataType}}} {{name}},
-       {{/vars}}
+       {{^vendorExtensions.x-dart-inherited}}
+         {{^complexType}}
+           {{#allowableValues}}
+             {{^min}}
+               {{classname}}_{{name}}_Enum {{name}},
+             {{/min}}
+             {{#min}}
+               {{{dataType}}} {{name}},
+             {{/min}}
+           {{/allowableValues}}
+           {{^allowableValues}}
+             {{{dataType}}} {{name}},
+           {{/allowableValues}}
+         {{/complexType}}
+         {{#complexType}}
+           {{{dataType}}} {{name}},
+         {{/complexType}}
+       {{/vendorExtensions.x-dart-inherited}}
+       {{#vendorExtensions.x-dart-inherited}}
+         {{{dataType}}} {{name}},
+       {{/vendorExtensions.x-dart-inherited}}
+     {{/vars}}
     }{{/hasVars}}) {
     {{classname}} copy = {{classname}}();
   {{#vars}}
@@ -338,3 +384,16 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
     return copy;
   }
 }
+
+  {{#vars}}
+  {{^vendorExtensions.x-dart-inherited}}
+    {{^complexType}}
+      {{#allowableValues}}
+        {{^min}}
+
+          enum {{classname}}_{{name}}_Enum { {{#values}} {{.}}, {{/values}} }
+        {{/min}}
+      {{/allowableValues}}
+    {{/complexType}}
+  {{/vendorExtensions.x-dart-inherited}}
+{{/vars}}
