#12 Missing branches fixed in Json serialization - regression of enum,

--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -216,10 +216,16 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
             {{^min}}
               json[r'{{baseName}}'] = LocalApiClient.serialize({{name}}.toValue());
             {{/min}}
+            {{#min}}
+              json[r'{{baseName}}'] = LocalApiClient.serialize({{name}});
+            {{/min}}
           {{/allowableValues}}
           {{^allowableValues}}
             json[r'{{baseName}}'] = LocalApiClient.serialize({{name}});
           {{/allowableValues}}
+        {{/complexType}}
+        {{#complexType}}
+          json[r'{{baseName}}'] = LocalApiClient.serialize({{name}});
         {{/complexType}}
       {{/isDate}}
       {{/isDateTime}}
