--- a/src/main/resources/dart2-v3template/enum.mustache
+++ b/src/main/resources/dart2-v3template/enum.mustache
@@ -7,10 +7,10 @@ enum {{classname}} {
 
 class {{classname}}TypeTransformer {
   static Map<String, {{classname}}> fromJsonMap = {  {{#allowableValues}}
-  {{#enumVars}}'{{{name}}}':{{classname}}.{{{name}}}{{^-last}}, {{/-last}}{{/enumVars}}
+  {{#enumVars}}{{{value}}}:{{classname}}.{{{name}}}{{^-last}}, {{/-last}}{{/enumVars}}
 {{/allowableValues}} };
   static Map<{{classname}}, String> toJsonMap = {  {{#allowableValues}}
-  {{#enumVars}}{{classname}}.{{{name}}}:'{{{name}}}'{{^-last}}, {{/-last}}{{/enumVars}}
+  {{#enumVars}}{{classname}}.{{{name}}}:{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}
 {{/allowableValues}} };
 
   static {{classname}} fromJson(dynamic data) {
